Minor change to CSS to fix the product dashboard table, which was overlapping other content areas
git-svn-id: https://socorro.googlecode.com/svn/trunk@1780 efcc4bdc-162a-0410-a8af-5b4b46c5376d

--- a/webapp-php/css/screen.css
+++ b/webapp-php/css/screen.css
@@ -926,7 +926,9 @@ div.expandable-menu, div.each-sparkline {
 
 .product_dashboard_left th,
 .product_dashboard_left td {
+    max-width: 280px;
     padding: .1em;
+    width: 280px;
 }
 
 .product_dashboard_right {
